convert packpin response into object, set up synced storage

--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -9,7 +9,8 @@
     <script type="text/javascript" src="../../js/app.js"></script>
 </head>
 <body>
-	<input type="text" id="tracking-num">
+	<input type="text" id="tracking-num" placeholder="Tracking Number">
+	<input type="text" id="tracking-title" placeholder="title">
 	<button type="submit" id="tracker-submit">Track</button>
 	<div id="saved-packages"></div>
 </body>
