fix request to API to act as create route  and added index API call

--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -12,6 +12,14 @@
 	<input type="text" id="tracking-num" placeholder="Tracking Number">
 	<input type="text" id="tracking-title" placeholder="title">
 	<button type="submit" id="tracker-submit">Track</button>
-	<div id="saved-packages"></div>
+	<div id="saved-packages">
+		<table id="package-table">
+			<tr>
+				<th>Name</th>
+				<th>Status</th>
+				<th>Exp. Date</th>
+			</tr>
+		</table>
+	</div>
 </body>
 </html>
